# ncurses-snake-cpp

./: README.md  error_msg.txt  makefile  winsys
src/: CMakeLists.txt  cpoint.h  highscore.h  main.cpp  screen.cpp  screen.h  snake.h  stack.h  winsys.cpp  winsys.h
winsys.dSYM/Contents/: Info.plist
winsys.dSYM/Contents/Resources/DWARF/: winsys
